[gd_scene load_steps=3 format=3 uid="uid://c2ag7c45jmv1r"]

[ext_resource type="Script" path="res://MainScene.gd" id="1_jlnit"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_hsjw3"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_jlnit")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 236.0
offset_bottom = 54.0
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="HSlider" type="HSlider" parent="CanvasLayer/UI/ColorRect2"]
layout_mode = 0
offset_left = 104.0
offset_top = 24.0
offset_right = 184.0
offset_bottom = 40.0
focus_mode = 0
min_value = 5.0
max_value = 99.0
step = 2.0
value = 7.0

[node name="SliderLabel" type="Label" parent="CanvasLayer/UI/ColorRect2"]
layout_mode = 0
offset_left = 188.0
offset_top = 20.0
offset_right = 208.0
offset_bottom = 43.0
text = "5"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/UI/ColorRect2"]
layout_mode = 0
offset_left = 116.0
offset_right = 194.0
offset_bottom = 23.0
bbcode_enabled = true
text = "[u]Maze Size[/u]"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/UI/ColorRect2"]
layout_mode = 2
offset_left = 4.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 62.0
focus_mode = 0
text = "Delay:"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 410.0
offset_top = 12.0
offset_right = 636.0
offset_bottom = 54.0
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/ColorRect"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 219.0
offset_bottom = 36.0

[node name="AlgorithmLabel" type="Label" parent="CanvasLayer/UI/ColorRect/HBoxContainer"]
layout_mode = 2
text = "Algorithm:"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/UI/ColorRect/HBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
item_count = 3
selected = 0
popup/item_0/text = "A*"
popup/item_0/id = 0
popup/item_1/text = "BFS"
popup/item_1/id = 1
popup/item_2/text = "All"
popup/item_2/id = 2

[node name="SolveButton" type="Button" parent="CanvasLayer/UI/ColorRect/HBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Solve"

[node name="GenerateMazeButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 2
offset_left = 259.0
offset_top = 17.0
offset_right = 384.0
offset_bottom = 57.0
focus_mode = 0
text = "Generate Maze
"

[node name="HeuristicLabel" type="Label" parent="CanvasLayer/UI"]
visible = false
layout_mode = 2
offset_left = 417.0
offset_top = 61.0
offset_right = 499.0
offset_bottom = 84.0
text = "Heuristic:"

[node name="HeuristicOptionButton" type="OptionButton" parent="CanvasLayer/UI"]
visible = false
layout_mode = 2
offset_left = 503.0
offset_top = 57.0
offset_right = 576.0
offset_bottom = 88.0
focus_mode = 0
disabled = true
item_count = 4
selected = 0
popup/item_0/text = "Euclidian"
popup/item_0/id = 0
popup/item_1/text = "Manhattan"
popup/item_1/id = 1
popup/item_2/text = "Octile"
popup/item_2/id = 2
popup/item_3/text = "Chebyshev"
popup/item_3/id = 3

[node name="TimerLabel1" type="Label" parent="CanvasLayer/UI"]
visible = false
layout_mode = 2
offset_left = 238.0
offset_top = 566.0
offset_right = 354.0
offset_bottom = 589.0
text = "A* Solve Time: "

[node name="TimerLabel2" type="Label" parent="CanvasLayer/UI"]
visible = false
layout_mode = 2
offset_left = 238.0
offset_top = 590.0
offset_right = 354.0
offset_bottom = 613.0
text = "BFS Solve Time:"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(323, 321)
script = ExtResource("3_hsjw3")

[connection signal="value_changed" from="CanvasLayer/UI/ColorRect2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/UI/ColorRect2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="item_selected" from="CanvasLayer/UI/ColorRect/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/UI/ColorRect/HBoxContainer/SolveButton" to="." method="_on_solve_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/GenerateMazeButton" to="." method="_on_generate_maze_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/UI/HeuristicOptionButton" to="." method="_on_heuristic_option_button_item_selected"]
